--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.0",
+    "classnames": "^2.2.5",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^1.3.1",
     "express": "^4.15.3",
+    "immutable": "^3.8.1",
+    "passport": "^0.4.0",
+    "passport-twitch": "^1.0.3",
     "prop-types": "^15.5.10",
     "react": "next",
     "react-dom": "next",
+    "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-tree-walker": "^2.1.2"
+    "react-tree-walker": "^2.1.2",
+    "redux": "^3.7.2",
+    "shortid": "^2.2.8",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
