--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^1.3.1",
     "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^3.0.0",
     "immutable": "^3.8.1",
     "passport": "^0.4.0",
     "passport-twitch": "^1.0.3",
@@ -36,6 +37,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.24.1",
     "babel-template": "^6.25.0",
     "babel-types": "^6.25.0",
@@ -46,14 +48,16 @@
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-util": "^3.0.8",
+    "merge": "^1.2.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "prettysize": "^0.1.0",
     "react-hot-loader": "next",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.4.1",
+    "webpack": "^3.5.6",
     "webpack-dev-server": "^2.6.1",
+    "webpack-merge": "^4.1.0",
     "webpack-node-externals": "^1.6.0"
   }
 }
