--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-session": "^1.3.1",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "immutable": "^3.8.1",
     "passport": "^0.4.0",
     "passport-twitch": "^1.0.3",
@@ -28,7 +29,8 @@
     "redux": "^3.7.2",
     "shortid": "^2.2.8",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "svg-url-loader": "^2.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
