--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "immutable": "^3.8.1",
+    "node-fetch": "^1.7.3",
     "passport": "^0.4.0",
     "passport-twitch": "^1.0.3",
     "prop-types": "^15.5.10",
